# psop

./: .env.example  .gitignore  AGENTS.md  README.md  pytest.ini  vision.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  app.py  worker_main.py
backend/app/agent_harness/: __init__.py  agent_decision.py  agent_spec.py  context.py  definitions.py  errors.py  events.py  guardrails.py  model.py  planning.py  runner.py  schemas.py  service.py  tools.py
backend/app/agent_harness/agents/: context.py  factory.py  registry.py
backend/app/agent_harness/definitions/: __init__.py  builtin_agents.py  pskill_builder.py  pskill_compiler.py  pskill_evaluator.py  pskill_runner.py  pskill_tester.py  psop_governance.py
backend/app/agent_harness/demo/: AGENTS.md  agent.yaml  system.md
backend/app/agent_harness/events/: __init__.py  agent_event_emitter.py  event_redaction.py  event_types.py
backend/app/agent_harness/memory/: __init__.py  file_store.py  memory_harness.py  store.py
backend/app/agent_harness/middlewares/: __init__.py  builder.py  dangling_tool_call.py  model_events.py  token_usage.py  tool_calls.py
backend/app/agent_harness/models/: __init__.py  factory.py  psop_gateway_chat_model.py  scripted_builder_chat_model.py  scripted_chat_model.py  scripted_compiler_chat_model.py  scripted_runner_chat_model.py
backend/app/agent_harness/persistence/: __init__.py  models.py  (+4 more)
backend/app/agent_prompts/: models.py  repository.py  schemas.py  service.py
backend/app/agents/: __init__.py  activity.py  models.py  registry.py  repository.py  schemas.py  service.py  tool_authorization_context.py
backend/app/api/: dependencies.py  router.py  schemas.py
backend/app/compiler/: __init__.py  agent.py  formal_v5.py  models.py  repository.py  schemas.py  service.py
backend/app/core/: config.py  logging.py  observability.py
backend/app/domain/: __init__.py
backend/app/evaluations/: __init__.py  activity.py  evidence.py  models.py  repository.py  schemas.py  service.py
backend/app/gateway/: __init__.py  asr.py  gitlab.py  inference.py
backend/app/governance/: __init__.py  activity.py  models.py  repository.py  schemas.py  service.py
backend/app/infra/: __init__.py  database.py  object_store.py
backend/app/jobs/: models.py  progress.py  repository.py  service.py  types.py  worker.py
backend/app/memory/: __init__.py  models.py  policy.py  repository.py  schemas.py  service.py
backend/app/observability/: __init__.py  schemas.py  service.py
backend/app/pskills/: __init__.py  activity.py  draft.py  manifest.py  materials.py  models.py  repository.py  schemas.py  service.py  video_analysis.py
backend/app/runtime/: __init__.py  models.py  repository.py  schemas.py  service.py  tool_authorization_events.py  websocket.py
backend/app/skills/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/testing/: activity.py  models.py  repository.py  schemas.py  service.py
backend/app/tools/: __init__.py  models.py  repository.py  schemas.py  service.py
(+441 files in other folders)
