[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "psop-server"
version = "0.1.0"
description = "Generic FastAPI scaffold for the PSOP workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "opentelemetry-api>=1.28,<2.0",
  "opentelemetry-sdk>=1.28,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.28,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0",
  "opentelemetry-instrumentation-httpx>=0.49b0,<1.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<1.0",
  "opentelemetry-instrumentation-logging>=0.49b0,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "PyYAML>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["../tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
